# MiniOFP

./: CMakeLists.txt  LICENSE  README.md
data/: aircraft.csv  airports.csv  airways.csv  waypoints.csv
include/: Aircraft.h  Learning.md  NavDB.h  OFPEngine.h  RouteFinder.h  geometry.h
src/: main.cpp
tests/: README.md  SimpleTest.h  test_main.cpp  test_main_gtest.cpp
